# polars_bin2

./: README.md  pyproject.toml
polars_bin2/: __init__.py  expr_bin2.py  series_bin2.py
